--- a/api/pom.xml
+++ b/api/pom.xml
@@ -169,7 +169,7 @@
                         <Specification-Vendor>${vendor.name}</Specification-Vendor>
                         <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
                         <Implementation-Vendor-Id>${implementation.vendor.id}</Implementation-Vendor-Id>
-                        <Import-Package>javax.ejb.*;version="[3.1,3.2.98)",*</Import-Package>
+                        <Import-Package>javax.ejb.*;version="[3.1,3.2.98)",javax.rmi.CORBA,*</Import-Package>
 			<_include>-${basedir}/osgi.bundle</_include>
                     </instructions>
                 </configuration>
